# rust_full_stack

./: Cargo.toml  README.md
backend/: Cargo.toml  Makefile  README.md
backend/config/: development.yaml  test.yaml
backend/dockerfiles/local_dev/: docker-compose.yaml
backend/documents/: acstor_db.md
backend/examples/: playground.rs  quick_dev_for_files.rs  quick_dev_for_posts.rs  quick_dev_for_testing_auth.rs  quick_dev_for_testing_rpc.rs
backend/migration/src/: lib.rs  m20241113_065545_posts.rs  m20241113_132948_files.rs  m20241216_123238_acstor_storage_types.rs  m20241223_095243_acstor_features.rs  m20241223_100314_storage_type_storage_feature.rs
backend/src/: app.rs  lib.rs
backend/src/controllers/: acstor_features.rs  file.rs  graphql.rs  mod.rs  post.rs  storage_types.rs
backend/src/graphql/: query_root.rs
backend/src/mailers/: auth.rs
backend/src/middlewares/: mod.rs
backend/src/models/: acstor_features.rs  acstor_features_to_storage_types.rs  files.rs  mod.rs  posts.rs  storage_types.rs
backend/src/models/_entities/: acstor_features.rs  acstor_features_to_storage_types.rs  files.rs  mod.rs  posts.rs  prelude.rs  storage_types.rs  users.rs
backend/tests/models/: acstor_features.rs  mod.rs
backend/tests/requests/: auth.rs  mod.rs  storage_types.rs
common_shared/: Cargo.toml
common_shared/src/: lib.rs  test_coverage.rs
dungeoncrawl/: Cargo.toml  Makefile  README.md
dungeoncrawl/src/: main.rs
frontend/: .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
frontend/assets/dungeocrawl/: dungeoncrawl.d.ts  dungeoncrawl.js  dungeoncrawl_bg.wasm  dungeoncrawl_bg.wasm.d.ts
frontend/assets/styling/: main.css  sidebar.css
frontend/documents/: init_frontend.md
frontend/src/: config.rs  error.rs  main.rs  routes.rs
frontend/src/components/: mod.rs  navbar.rs  sidebar.rs
frontend/src/components/form/: form_button.rs  form_input.rs  form_select.rs  form_textarea.rs  mod.rs
frontend/src/views/: mod.rs
frontend/src/views/blog/: mod.rs  post_create.rs  post_detail.rs  post_list.rs
frontend/src/views/demos/: async_with_coroutines.rs  async_with_resource.rs  async_with_spawn.rs  dynamic_rendering.rs  event_handler.rs  llm.rs  mod.rs  user_input.rs
frontend/src/views/test_coverage/: acstor_feature_create.rs  acstor_feature_list.rs  mod.rs  storage_type_create.rs  storage_type_list.rs
