[workspace]
resolver = "2"
members = ["frontend", "backend", "dungeoncrawl"]


[workspace.dependencies]
tracing = "0.1.40"
loco-rs = { version = "^0.13" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
futures-util = { version = "^0.3" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
