[package]
name = "dungeoncrawl"
version = "0.1.0"
edition = "2021"

[dependencies]
bracket-lib = { version = "0.8.7" }
glow = "=0.16.0"


# cargo build --target wasm32-unknown-unknown
# wasm-bindgen --out-dir ../frontend/assets/dungeoncrawl/ --target web ../target/wasm32-unknown-unknown/release/dungeoncrawl.wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ['Window', 'Document'] }
