[package]
name = "frontend"
version = "0.1.0"
authors = ["zwpdbh <hyperion_z@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }

# region:      --- Added by user 
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }
dioxus-free-icons = { version = "0.9", features = [
  "font-awesome-brands",
  "bootstrap",
] }

# endregion:   --- Added by user 

[dev-dependencies]
dioxus-cli = { version = "0.6" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
